@@ -234,19 +234,20 @@ const char *const AboutSplash=
 "<tr>\n"
 " <td bgcolor='#CCCCCC'>\n"
 "  <h4>Release overview</h4>\n"
-"  September 06, 2011\n"
+"  September 21, 2011\n"
 "<tr>\n"
 " <td bgcolor='#FFFFFF'>\n"
 "  <table border='0' cellspacing='0' cellpadding='5'>\n"
 "  <tr>\n"
 "   <td>\n"
 "<p>\n"
-"Dillo-3.0 is a port to FLTK-1.3, which is big news because FLTK-1.3.0 was\n"
+"The dillo-3.0.1 release brings improved privacy and some new options for\n"
+"configuring the user interface.\n"
+"<p>\n"
+"Dillo3 is a port to FLTK-1.3, which is big news because FLTK-1.3.0 was\n"
 "<a href='http://fltk.org/articles.php?L1086'>released</a>\n"
 "in June, clearing the way for Dillo to return to those distributions\n"
 "which had excluded Dillo2 due to FLTK2 never being officially released.\n"
-"<p>\n"
-"Dillo-3.0 also has plenty of improvements and bugfixes.\n"
 "<p>\n"
 "After this release, the core team will focus on implementing the CSS\n"
 "feature of floating elements. This will <em>greatly</em> improve dillo's\n"
@@ -274,6 +275,15 @@ const char *const AboutSplash=
 "  <table border='0' cellspacing='0' cellpadding='5'>\n"
 "  <tr>\n"
 "   <td>\n"
+"dillo-3.0.1:\n"
+"<ul>\n"
+"<li>Privacy -- never send cookies when making third-party requests, and\n"
+"    never accept cookies in the responses to these requests.\n"
+"<li>Add preference for UI theme.\n"
+"<li>Allow key bindings for paging left/right.\n"
+"<li>Add show_quit_dialog dillorc option.\n"
+"</ul>\n"
+"dillo-3.0:\n"
 "<ul>\n"
 "<li>Ported Dillo to FLTK-1.3.\n"
 "<li>Native build on OSX.\n"
